[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py37"]

[tool.poetry]
name = "with-contextvars"
version = "0.1.2"
description = "Context manager for setting contextvars variables"
authors = ["Robert Schindler <dev@bob1.de>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/bob1de/python-with-contextvars"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
